# Risk-Identification-Thesis

./: .gitignore  LLAVA_FineTune.ipynb  pyproject.toml
LLaVa/: Fine_tune_LLaVa_on_a_custom_dataset_(with_PyTorch_Lightning).ipynb
notebooks/en/: fine_tuning_granite_vision_sft_trl.ipynb
prototype/: llava_processor.py  main.py  risk_register.py  yolo_processor.py
prototype/docs/: competition.md  tracks.md  water.md
