[project]
name = "risk-identification-thesis"
version = "0.1.0"
description = ""
authors = [
    {name = "adam",email = "fittleradam@gmail.com"}
]
package-mode = false
requires-python = ">=3.10,<4.0"
dependencies = [
    "ultralytics",  # For YOLO model
    "langchain",    # For language model processing
    "torch",        # PyTorch for model inference
    "opencv-python",# For image processing
    "numpy",         # For numerical operations
    "langchain-mistralai (>=0.2.7,<0.3.0)",
    "langchain-openai (>=0.3.7,<0.4.0)",
    "langchain-community (>=0.3.19,<0.4.0)",
    "langchain-neo4j (>=0.4.0,<0.5.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "neo4j (>=5.28.1,<6.0.0)",
    "langchain-experimental (>=0.3.4,<0.4.0)",
    "unstructured (>=0.16.23,<0.17.0)",
    "markdown (>=3.7,<4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
